--- a/EmCal Academy/public/CSS/Home.CSS
+++ b/EmCal Academy/public/CSS/Home.CSS
@@ -3,7 +3,7 @@
 body{
 margin: 0;
 padding: 0;
-background-color: #008CBA;
+background-color: #FFFFFF;
 position: relative;
 }
 
@@ -13,11 +13,16 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #F0F0F0;
   height: 80px;
   border-bottom-right-radius: 50px;
   border-bottom-left-radius: 50px;
   top: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .logo img {
@@ -69,8 +74,10 @@ color: white;
 padding: 10px 8px;
 text-align: center;
 text-decoration: none;
-display: inline-block;
 font-size: 16px;
+display: flex;
+justify-content: center;
+align-items: center;
 margin: 4px 2px;
 transition-duration: 0.4s;
 cursor: pointer;
@@ -105,9 +112,15 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 25em;
   justify-content: center;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 20px;
+}
+
+
+.swiper img {
+  height: 600px !important;
 }
 
 .hero {
@@ -115,16 +128,19 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: #FFFFFF;
+  color: #008CBA;
 }
 
-.hero .left {
-  width: 40%;
+.swiper .left {
+  position: absolute;
+  z-index: 10000;
 }
 
-.hero .left p {
+.swiper .left p {
   font-weight: bold;
   font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 1.5;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
