--- a/EmCal Academy/public/CSS/Home.CSS
+++ b/EmCal Academy/public/CSS/Home.CSS
@@ -1,3 +1,5 @@
+@import url("../ClashDisplay_Complete/Fonts/WEB/css/clash-display.css");
+
 body {
   margin: 0;
   padding: 0;
@@ -111,18 +113,10 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 25em;
+  gap: 8em;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-}
-
-.hero {
-  width: 85%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #008CBA;
 }
 
 .swiper .left {
@@ -141,4 +135,54 @@ main {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #1a222b;
   font-weight: 700;
+}
+
+section.about,
+section.features {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 50px;
+  margin-bottom: 30px;
+}
+
+section.about h1,
+section.features h1 {
+  color: #4640DE;
+  font-family: "ClashDisplay-Variable", sans-serif;
+  font-weight: 700;
+  font-size: 35px;
+}
+
+section.about .bottom,
+section.features .bottom {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+section.about p,
+section.features p {
+  text-align: center;
+  color: #515B6F;
+  width: 80%;
+}
+
+section.features {
+  margin-top: 100px;
+}
+
+section.features .bottom {
+  gap: 1em;
+}
+
+section.features .box {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #F0F0F0;
 }
