--- a/EmCal Academy/public/CSS/Home.CSS
+++ b/EmCal Academy/public/CSS/Home.CSS
@@ -4,7 +4,9 @@ body {
   margin: 0;
   padding: 0;
   background-color: #FFFFFF;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
 }
 
 nav {
@@ -150,7 +152,7 @@ section.features {
 
 section.about h1,
 section.features h1 {
-  color: #4640DE;
+  color: #008CBA;
   font-family: "ClashDisplay-Variable", sans-serif;
   font-weight: 700;
   font-size: 35px;
@@ -185,4 +187,71 @@ section.features .box {
   align-items: center;
   justify-content: flex-start;
   background-color: #F0F0F0;
+  padding-bottom: 30px;
+}
+
+section.features .box h4 {
+  font-size: 25px;
+  color: #008CBA;
+  font-family: "ClashDisplay-Variable", sans-serif;
+  font-weight: 600;
+}
+
+section.features .box p {
+  color: #515B6F;
+  font-size: 18px;
+}
+
+footer {
+  width: 100%;
+  margin-top: 200px;
+  background-color: #F0F0F0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-cont {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 30px;
+}
+
+footer .top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .top .logo {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+footer .top .logo h3 {
+  font-size: 30px;
+  color: #008CBA;
+  font-family: "ClashDisplay-Variable", sans-serif;
+  font-weight: 600;
+}
+
+footer .top .phone {
+  display: flex;
+  gap: 1em;
+}
+
+footer .top .phone p {
+  color: #515B6F;
+}
+
+footer .copy {
+  display: flex;
+  justify-content: center;
+}
+
+footer .copy p {
+  color: #515B6F;
 }
